--- a/AIAssistantControlApp/AIAssistantControlApp.csproj
+++ b/AIAssistantControlApp/AIAssistantControlApp.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -38,14 +53,20 @@
   <PropertyGroup>
     <ApplicationIcon>frame1.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Runtime.WindowsRuntime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Windows\Microsoft.NET\Framework\v4.0.30319\System.Runtime.WindowsRuntime.dll</HintPath>
     </Reference>
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -60,12 +81,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AIAssistantControlPanelService.cs" />
+    <Compile Include="AIAssistantControlPanelService\AIACPService.cs" />
+    <Compile Include="AIAssistantControlPanelService\AIACPConnectionEventArgs.cs" />
     <Compile Include="AppContext.cs" />
+    <Compile Include="Connected Services\MIOMService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceState.cs" />
     <Compile Include="SystemTray.cs" />
+    <Compile Include="WindowsServices\MIOMService.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -76,6 +104,17 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="app.manifest" />
+    <None Include="Connected Services\MIOMService\mioms.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\MIOMService\mioms1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\MIOMService\mioms2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\MIOMService\MultimediaIOManagerService.wsdl" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -93,6 +132,13 @@
     <None Include="Resources\AppIcon.gif" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Connected Services\MIOMService\mioms.disco" />
+    <None Include="Connected Services\MIOMService\configuration91.svcinfo" />
+    <None Include="Connected Services\MIOMService\configuration.svcinfo" />
+    <None Include="Connected Services\MIOMService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="frame1.ico" />
     <EmbeddedResource Include="TrayIcons\BadSignal\frame1.png" />
     <EmbeddedResource Include="TrayIcons\BadSignal\frame10.png" />
@@ -340,10 +386,28 @@
     <EmbeddedResource Include="TrayIcons\Normal\frame9.png" />
   </ItemGroup>
   <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\MIOMService\" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\MultimediaIOManagerService\MultimediaIOManagerService.csproj">
-      <Project>{b54a6aff-54ea-4db1-9d42-5fd49f2ab55a}</Project>
+      <Project>{B54A6AFF-54EA-4DB1-9D42-5FD49F2AB55A}</Project>
       <Name>MultimediaIOManagerService</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
