--- a/AIAssistantControlApp/App.config
+++ b/AIAssistantControlApp/App.config
@@ -1,18 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BasicHttpBinding_IMIOMService" />
+                <binding name="BasicHttpBinding_IMIOMService"/>
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:21100/mioms" binding="basicHttpBinding"
-                bindingConfiguration="BasicHttpBinding_IMIOMService" contract="MIOMService.IMIOMService"
-                name="BasicHttpBinding_IMIOMService" />
+            <endpoint address="http://localhost:21100/mioms" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IMIOMService" contract="MIOMService.IMIOMService" name="BasicHttpBinding_IMIOMService"/>
         </client>
     </system.serviceModel>
 </configuration>
